syntax = "proto3";

package chitty_chat;

option go_package = "./.proto-gen";

service Auth {
    rpc Login(JoinRequest) returns (JoinResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message JoinRequest {
    string username = 1;
    string channel_id = 2;
}

message LogoutRequest {
    string session_token = 1;
}

message JoinResponse {
    string session_token = 1;
}

message LogoutResponse{}